# src/models/otp/otp.model.ts
@@ -1,7 +1,0 @@
-export interface IOtp {
-  email: string;
-  otpCode: string;
-  expireIn: Date;
-}
-
-export interface IOtpCreate extends IOtp {}
