# src/models/user/user.model.ts
@@ -1,10 +1,8 @@
 export interface IUser {
+  first_name: string;
+  last_name: string;
   secretKey?: string;
   active?: boolean;
   phone: number;
   email: string;
-  resend?: number;
-  expireAt?: Date;
-  createdAt?: Date;
 }
-
